--- a/public/styles.css
+++ b/public/styles.css
@@ -54,9 +54,10 @@ body::before {
 
 }
 
-.form{
-    height: 200px   ;
+.form {
+    height: 200px;
 }
+
 .latloncontainer {
     width: 300px;
     display: flex;
@@ -69,7 +70,7 @@ body::before {
     font-family: 'Mauline', sans-serif;
     opacity: 0.8;
     pointer-events: none;
-    
+
 }
 
 input {
@@ -83,21 +84,21 @@ input {
 }
 
 input[type="text"]:hover {
-    transition:transform ease-in 0.2s;
+    transition: transform ease-in 0.2s;
     cursor: pointer;
     transform: translate3d(0px, -5px, 0px);
     box-shadow: 2px 5px 1px black;
 }
 
-input[type="text"]::placeholder{
-    font-size: 20px;   
+input[type="text"]::placeholder {
+    font-size: 20px;
     color: rgb(164, 163, 163);
-    margin-left: 20px;   
+    margin-left: 20px;
 }
 
 input:focus {
     outline: none;
-    
+
 }
 
 #subbtn {
@@ -121,22 +122,22 @@ input:focus {
     box-shadow: 2px 5px 1px black;
 }
 
-.tempcontainer{
+.tempcontainer {
     display: flex;
     flex-direction: row;
 }
 
-.tempicon{
+.tempicon {
     background-image: url("temp.png");
-    background-size: cover;       
-    background-repeat: no-repeat; 
+    background-size: cover;
+    background-repeat: no-repeat;
     background-position: center;
     height: 150px;
     width: 150px;
     opacity: 0.8;
 }
 
-.temp{
+.temp {
     font-size: 80px;
     margin-top: 35px;
     font-family: 'Mauline', sans-serif;
@@ -144,10 +145,43 @@ input:focus {
     width: 130px;
     margin-left: 10px;
     color: black;
+}
+
+.temp:hover {
+    cursor: default;
 
 }
 
-.temp:hover{
-    cursor: default;
+.iconcontainer{
+    display: flex;
+    flex-direction: column;
+}
 
+#weatherdesc{
+    font-family: 'Mauline';
+    opacity: 0.7;
+    margin-top: 40px;
+    height: 45px;
+}
+
+.weathericon{
+    height: 60px;
+}
+
+.windicon{
+    background-image: url("wind.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 130px;
+    width: 150px;
+    opacity: 0.7;
+}
+
+#winddesc{
+    font-family: 'Mauline';
+    opacity: 0.7;
+    height: 45px;
+    margin-left: 10px;
+    font-size: 40px;
 }
